--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -3,6 +3,7 @@
 <label>Name</label>
 <input id="name" name="name"></input>
     </div>
+ <%= token_tag nil %>
 <input type="submit" value="submit"></input>
 </form>
 
