Added sorting! Need an indicator for sorting still Updated nav to look prettier. Didn't completely, work :/ seems to be a bug Couldn't figure out how to assign default status.

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,9 +14,9 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Book</th>
-      <th>ISBN</th>
-      <th>Status</th>
+      <th><%= link_to "Book", :sort => "name" %></th>
+      <th><%= link_to "ISBN", :sort => "ISBN" %></th>
+      <th><%= link_to "Status", :sort => "status" %></th>
     </tr>
   </thead>
 
