--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -11,7 +11,7 @@
       <% end %>
       <li><%= link_to 'All Books', @index, :class => "btn btn-default" %></li>
       <!--<li><%= link_to 'New Book', @index %></li>-->
-      <li><%= link_to 'Login', controller: "users", action: "login", :class => "btn btn-default" %></li>
+      <li><%= link_to 'Login', :class => "btn btn-default", controller: "users", action: "login" %></li>
     </ul>
   </div>
 </div>
