started adding tests for sorting, sorting test is failing but not for the right reasons

--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -1,10 +1,10 @@
 <!--=== Top ===-->
-<%= stylesheet_link_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' %>
+<%= stylesheet_link_tag 'http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' %>
 <div class="browse">
   <div class="container">
     <ul>
       <% user = User.find_by(id: session[:user_id]) %>
-        <% if user.admin?%>
+        <% if user && user.admin?%>
         <%= "signed in as admin" %>
         <% else %>
         <%= "signed in as standard user" %>
